Trying to fix icon bug on mobile

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -58,22 +58,22 @@ li {
 ul {
     padding: 0;
 }
-
+/* 
 .material-icons-outlined {
   
     text-rendering: optimizeLegibility;
 
 
      /* Support for all WebKit browsers. */
-     -webkit-font-smoothing: antialiased;
+     /* -webkit-font-smoothing: antialiased; */
     
    
      /* Support for Firefox. */
-     -moz-osx-font-smoothing: grayscale;
+     /* -moz-osx-font-smoothing: grayscale; */
    
      /* Support for IE. */
-     font-feature-settings: 'liga';
-}
+     /* font-feature-settings: 'liga'; */
+/* }  */
 
 .icons {
     color: #4bccff;
